--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-iife": "^0.3.0",
+    "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "uglifyjs": "^2.4.10"
   },
-  "dependencies": {
-    "gulp-insert": "^0.5.0"
-  }
+  "dependencies": {}
 }
